# AzureKinect-ToolTracker

./: .gitignore  CMakeLists.txt  README.md  win.rc
include/: IRToolTrack.h  IRToolTracking.h  ViewerWindow.h
src/: IRToolTrack.cpp  IRToolTracking.cpp  ViewerWindow.cpp  viewer_main.cpp
